fixed images cropping out

--- a/css/shop.css
+++ b/css/shop.css
@@ -174,10 +174,12 @@
 }
 
 .image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
   display: block;
+  margin: auto;
+  padding: 10px;
   transition: transform 0.4s ease;
 }
 
